syntax = "proto3";
option java_multiple_files = true;
package com.om.example.grpc.struct;


message EmployeeResponse {
    int32 status = 1;
    string message = 2;
    Employee employee = 3;
}
message Employee {
    string employeeId = 1;
    string employeeName = 2;
    int32 age = 3;

}
message AllEmployeesResponse {
    int32 status = 1;
    string message = 2;
    repeated Employee items = 3;
}

service EmployeeService {
    rpc getAllEmployees (Employee) returns (AllEmployeesResponse);
    rpc getEmployeeById (Employee) returns (EmployeeResponse);
    rpc createEmployee (Employee) returns (EmployeeResponse);
    rpc updateEmployee (Employee) returns (EmployeeResponse);
    rpc deleteEmployee (Employee) returns (EmployeeResponse);
}